java-story/v1/INDEX.md
# v1 file index

Captioned videos: **85**

- [Java_Episode_01_Why_Java_Exists_CAPTIONED.mp4](Java_Episode_01_Why_Java_Exists_CAPTIONED.mp4)
- [Java_Episode_02_JDK_JRE_JVM_CAPTIONED.mp4](Java_Episode_02_JDK_JRE_JVM_CAPTIONED.mp4)
- [Java_Episode_03_Program_Structure_CAPTIONED.mp4](Java_Episode_03_Program_Structure_CAPTIONED.mp4)
- [Java_Episode_04_Variables_Data_Types_CAPTIONED.mp4](Java_Episode_04_Variables_Data_Types_CAPTIONED.mp4)
- [Java_Episode_05_Operators_CAPTIONED.mp4](Java_Episode_05_Operators_CAPTIONED.mp4)
- [Java_Episode_06_Control_Flow_CAPTIONED.mp4](Java_Episode_06_Control_Flow_CAPTIONED.mp4)
- [Java_Episode_07_Methods_CAPTIONED.mp4](Java_Episode_07_Methods_CAPTIONED.mp4)
- [Java_Episode_08_Arrays_CAPTIONED.mp4](Java_Episode_08_Arrays_CAPTIONED.mp4)
- [Java_Episode_09_Strings_CAPTIONED.mp4](Java_Episode_09_Strings_CAPTIONED.mp4)
- [Java_Episode_10_OOP_CAPTIONED.mp4](Java_Episode_10_OOP_CAPTIONED.mp4)
- [Java_Episode_11_Access_Modifiers_CAPTIONED.mp4](Java_Episode_11_Access_Modifiers_CAPTIONED.mp4)
- [Java_Episode_12_Packages_CAPTIONED.mp4](Java_Episode_12_Packages_CAPTIONED.mp4)
- [Java_Episode_13_Enums_CAPTIONED.mp4](Java_Episode_13_Enums_CAPTIONED.mp4)
- [Java_Episode_14_Wrappers_Autoboxing_CAPTIONED.mp4](Java_Episode_14_Wrappers_Autoboxing_CAPTIONED.mp4)
- [Java_Episode_15_Generics_CAPTIONED.mp4](Java_Episode_15_Generics_CAPTIONED.mp4)
- [Java_Episode_16_Annotations_CAPTIONED.mp4](Java_Episode_16_Annotations_CAPTIONED.mp4)
- [Java_Episode_17_Reflection_CAPTIONED.mp4](Java_Episode_17_Reflection_CAPTIONED.mp4)
- [Java_Episode_18_Records_CAPTIONED.mp4](Java_Episode_18_Records_CAPTIONED.mp4)
- [Java_Episode_19_Sealed_Classes_CAPTIONED.mp4](Java_Episode_19_Sealed_Classes_CAPTIONED.mp4)
- [Java_Episode_20_Modules_JPMS_CAPTIONED.mp4](Java_Episode_20_Modules_JPMS_CAPTIONED.mp4)
- [Java_Episode_21_Lists_CAPTIONED.mp4](Java_Episode_21_Lists_CAPTIONED.mp4)
- [Java_Episode_22_Sets_CAPTIONED.mp4](Java_Episode_22_Sets_CAPTIONED.mp4)
- [Java_Episode_23_Maps_CAPTIONED.mp4](Java_Episode_23_Maps_CAPTIONED.mp4)
- [Java_Episode_24_Queues_Deques_CAPTIONED.mp4](Java_Episode_24_Queues_Deques_CAPTIONED.mp4)
- [Java_Episode_25_Sorting_Comparators_CAPTIONED.mp4](Java_Episode_25_Sorting_Comparators_CAPTIONED.mp4)
- [Java_Episode_26_Streams_Intro_CAPTIONED.mp4](Java_Episode_26_Streams_Intro_CAPTIONED.mp4)
- [Java_Episode_27_Stream_Collectors_CAPTIONED.mp4](Java_Episode_27_Stream_Collectors_CAPTIONED.mp4)
- [Java_Episode_28_FlatMap_Composition_CAPTIONED.mp4](Java_Episode_28_FlatMap_Composition_CAPTIONED.mp4)
- [Java_Episode_29_Parallel_Streams_CAPTIONED.mp4](Java_Episode_29_Parallel_Streams_CAPTIONED.mp4)
- [Java_Episode_30_Optional_CAPTIONED.mp4](Java_Episode_30_Optional_CAPTIONED.mp4)
- [Java_Episode_31_Java_Time_CAPTIONED.mp4](Java_Episode_31_Java_Time_CAPTIONED.mp4)
- [Java_Episode_32_Exceptions_CAPTIONED.mp4](Java_Episode_32_Exceptions_CAPTIONED.mp4)
- [Java_Episode_33_Try_With_Resources_CAPTIONED.mp4](Java_Episode_33_Try_With_Resources_CAPTIONED.mp4)
- [Java_Episode_34_Files_NIO2_CAPTIONED.mp4](Java_Episode_34_Files_NIO2_CAPTIONED.mp4)
- [Java_Episode_35_Readers_Writers_CAPTIONED.mp4](Java_Episode_35_Readers_Writers_CAPTIONED.mp4)
- [Java_Episode_36_Threads_Intro_CAPTIONED.mp4](Java_Episode_36_Threads_Intro_CAPTIONED.mp4)
- [Java_Episode_37_Synchronization_CAPTIONED.mp4](Java_Episode_37_Synchronization_CAPTIONED.mp4)
- [Java_Episode_38_Volatile_Happens_Before_CAPTIONED.mp4](Java_Episode_38_Volatile_Happens_Before_CAPTIONED.mp4)
- [Java_Episode_39_Explicit_Locks_CAPTIONED.mp4](Java_Episode_39_Explicit_Locks_CAPTIONED.mp4)
- [Java_Episode_40_ExecutorService_CAPTIONED.mp4](Java_Episode_40_ExecutorService_CAPTIONED.mp4)
- [Java_Episode_41_Callable_Future_CAPTIONED.mp4](Java_Episode_41_Callable_Future_CAPTIONED.mp4)
- [Java_Episode_42_Concurrent_Collections_CAPTIONED.mp4](Java_Episode_42_Concurrent_Collections_CAPTIONED.mp4)
- [Java_Episode_43_Atomics_CAPTIONED.mp4](Java_Episode_43_Atomics_CAPTIONED.mp4)
- [Java_Episode_44_Synchronizers_CAPTIONED.mp4](Java_Episode_44_Synchronizers_CAPTIONED.mp4)
- [Java_Episode_45_BlockingQueue_CAPTIONED.mp4](Java_Episode_45_BlockingQueue_CAPTIONED.mp4)
- [Java_Episode_46_CompletableFuture_CAPTIONED.mp4](Java_Episode_46_CompletableFuture_CAPTIONED.mp4)
- [Java_Episode_47_ForkJoinPool_CAPTIONED.mp4](Java_Episode_47_ForkJoinPool_CAPTIONED.mp4)
- [Java_Episode_48_ThreadLocal_CAPTIONED.mp4](Java_Episode_48_ThreadLocal_CAPTIONED.mp4)
- [Java_Episode_49_Deadlocks_CAPTIONED.mp4](Java_Episode_49_Deadlocks_CAPTIONED.mp4)
- [Java_Episode_50_Virtual_Threads_CAPTIONED.mp4](Java_Episode_50_Virtual_Threads_CAPTIONED.mp4)
- [Java_Episode_51_Class_Loading_CAPTIONED.mp4](Java_Episode_51_Class_Loading_CAPTIONED.mp4)
- [Java_Episode_52_Bytecode_Basics_CAPTIONED.mp4](Java_Episode_52_Bytecode_Basics_CAPTIONED.mp4)
- [Java_Episode_53_Heap_and_Stack_CAPTIONED.mp4](Java_Episode_53_Heap_and_Stack_CAPTIONED.mp4)
- [Java_Episode_54_Garbage_Collection_CAPTIONED.mp4](Java_Episode_54_Garbage_Collection_CAPTIONED.mp4)
- [Java_Episode_55_JIT_Compilation_CAPTIONED.mp4](Java_Episode_55_JIT_Compilation_CAPTIONED.mp4)
- [Java_Episode_56_GC_Collectors_CAPTIONED.mp4](Java_Episode_56_GC_Collectors_CAPTIONED.mp4)
- [Java_Episode_57_Memory_Leaks_Profiling_CAPTIONED.mp4](Java_Episode_57_Memory_Leaks_Profiling_CAPTIONED.mp4)
- [Java_Episode_58_Diagnostic_Tools_CAPTIONED.mp4](Java_Episode_58_Diagnostic_Tools_CAPTIONED.mp4)
- [Java_Episode_59_Escape_Analysis_CAPTIONED.mp4](Java_Episode_59_Escape_Analysis_CAPTIONED.mp4)
- [Java_Episode_60_Metaspace_Native_Memory_CAPTIONED.mp4](Java_Episode_60_Metaspace_Native_Memory_CAPTIONED.mp4)
- [Java_Episode_61_Reference_Types_CAPTIONED.mp4](Java_Episode_61_Reference_Types_CAPTIONED.mp4)
- [Java_Episode_62_JVM_Flags_Tuning_CAPTIONED.mp4](Java_Episode_62_JVM_Flags_Tuning_CAPTIONED.mp4)
- [Java_Episode_63_Object_Layout_CAPTIONED.mp4](Java_Episode_63_Object_Layout_CAPTIONED.mp4)
- [Java_Episode_64_Safepoints_CAPTIONED.mp4](Java_Episode_64_Safepoints_CAPTIONED.mp4)
- [Java_Episode_65_JVM_Startup_CAPTIONED.mp4](Java_Episode_65_JVM_Startup_CAPTIONED.mp4)
- [Java_Episode_66_JVM_Interview_Wrap_CAPTIONED.mp4](Java_Episode_66_JVM_Interview_Wrap_CAPTIONED.mp4)
- [Java_Episode_67_Design_Patterns_Intro_CAPTIONED.mp4](Java_Episode_67_Design_Patterns_Intro_CAPTIONED.mp4)
- [Java_Episode_68_Creational_Patterns_CAPTIONED.mp4](Java_Episode_68_Creational_Patterns_CAPTIONED.mp4)
- [Java_Episode_69_Structural_Patterns_CAPTIONED.mp4](Java_Episode_69_Structural_Patterns_CAPTIONED.mp4)
- [Java_Episode_70_Behavioral_Patterns_CAPTIONED.mp4](Java_Episode_70_Behavioral_Patterns_CAPTIONED.mp4)
- [Java_Episode_71_Spring_Framework_Intro_CAPTIONED.mp4](Java_Episode_71_Spring_Framework_Intro_CAPTIONED.mp4)
- [Java_Episode_72_IoC_and_DI_CAPTIONED.mp4](Java_Episode_72_IoC_and_DI_CAPTIONED.mp4)
- [Java_Episode_73_Spring_Boot_Basics_CAPTIONED.mp4](Java_Episode_73_Spring_Boot_Basics_CAPTIONED.mp4)
- [Java_Episode_74_Spring_MVC_REST_CAPTIONED.mp4](Java_Episode_74_Spring_MVC_REST_CAPTIONED.mp4)
- [Java_Episode_75_Spring_Data_Persistence_CAPTIONED.mp4](Java_Episode_75_Spring_Data_Persistence_CAPTIONED.mp4)
- [Java_Episode_76_Spring_Security_CAPTIONED.mp4](Java_Episode_76_Spring_Security_CAPTIONED.mp4)
- [Java_Episode_77_Spring_Testing_CAPTIONED.mp4](Java_Episode_77_Spring_Testing_CAPTIONED.mp4)
- [Java_Episode_78_Microservices_Basics_CAPTIONED.mp4](Java_Episode_78_Microservices_Basics_CAPTIONED.mp4)
- [Java_Episode_79_Observability_Resilience_CAPTIONED.mp4](Java_Episode_79_Observability_Resilience_CAPTIONED.mp4)
- [Java_Episode_80_Architecture_Interview_Wrap_CAPTIONED.mp4](Java_Episode_80_Architecture_Interview_Wrap_CAPTIONED.mp4)
- [Java_Episode_81_Caching_Strategies_CAPTIONED.mp4](Java_Episode_81_Caching_Strategies_CAPTIONED.mp4)
- [Java_Episode_82_API_Design_Deep_Dive_CAPTIONED.mp4](Java_Episode_82_API_Design_Deep_Dive_CAPTIONED.mp4)
- [Java_Episode_83_Event_Driven_Architecture_CAPTIONED.mp4](Java_Episode_83_Event_Driven_Architecture_CAPTIONED.mp4)
- [Java_Episode_84_Performance_Playbook_CAPTIONED.mp4](Java_Episode_84_Performance_Playbook_CAPTIONED.mp4)
- [Java_Episode_85_Production_Readiness_Capstone_CAPTIONED.mp4](Java_Episode_85_Production_Readiness_Capstone_CAPTIONED.mp4)
